[package]
name = "mio-named-pipes"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/mio-named-pipes"
homepage = "https://github.com/alexcrichton/mio-named-pipes"
documentation = "http://alexcrichton.com/mio-named-pipes"
description = """
Windows named pipe bindings for mio.
"""

[dependencies]
kernel32-sys = "0.2"
lazycell = "0.5"
log = "0.3"
mio = "0.6"
miow = "0.1.4"
winapi = "0.2"

[dev-dependencies]
env_logger = { version = "0.3", default-features = false }
rand = "0.3"

[replace.'mio:0.6.1']
git = 'https://github.com/alexcrichton/mio'
branch = 'custom-iocp'
