[package]
name = "mio-named-pipes"
version = "0.1.2"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexcrichton/mio-named-pipes"
homepage = "https://github.com/alexcrichton/mio-named-pipes"
documentation = "https://docs.rs/mio-named-pipes/0.1/x86_64-pc-windows-msvc/mio_named_pipes/"
description = """
Windows named pipe bindings for mio.
"""

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2"
lazycell = "0.5"
log = "0.3"
mio = "0.6.2"
miow = "0.1.5"
winapi = "0.2"

[dev-dependencies]
env_logger = { version = "0.3", default-features = false }
rand = "0.3"
