[package]
name = "mio-named-pipes"
description = "Windows named pipe bindings for mio"
version = "0.1.7"
authors = [
    "Brendan Molloy <brendan@bbqsrc.net>",
    "Alex Crichton <alex@alexcrichton.com>"
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bbqsrc/mio-named-pipes"
homepage = "https://github.com/bbqsrc/mio-named-pipes"
documentation = "https://docs.rs/mio-named-pipes/"
edition = "2018"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "i686-pc-windows-gnu",
]

[target.'cfg(windows)'.dependencies]
log = "0.4"
mio = "0.6.5"
miow = "0.3"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winerror", "ioapiset", "minwinbase", "winbase"]

[dev-dependencies]
env_logger = { version = "0.4", default-features = false }
rand = "0.4"
